// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NestedInput with usePhoneNumber renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j8 {
  background: #7A60FF;
  color: #FFF;
  border: none;
  height: auto;
  margin: 0px 0px 0px 0px;
  display: flex;
  opacity: 1;
  padding: 0 30px;
  position: relative;
  flex-flow: row nowrap;
  font-size: 18px;
  appearance: none;
  background: linear-gradient(112.25deg, #914EFF -20.38%, #5D1BFF 122.56%);
  min-height: 47px;
  text-align: center;
  transition: opacity 200ms ease-in-out;
  align-items: center;
  font-family: 'Inter', Helvetica, sans-serif;
  line-height: 24px;
  border-radius: 4px;
  letter-spacing: 0.3px;
  text-transform: capitalize;
  justify-content: center;
}

body #PickUpUI .j9 {
  width: auto;
}

body #PickUpUI .j12 {
  width: 100%;
}

body #PickUpUI .j0 {
  width: 100%;
  display: flex;
  padding: 0 6px;
  position: relative;
  flex-flow: row nowrap;
  max-width: 360px;
  align-items: center;
  border-radius: 8px;
  justify-content: space-between;
  background-color: #FFF;
}

body #PickUpUI .j1 {
  border: 1px solid #DFDAE6;
  height: 60px;
}

body #PickUpUI .j2 {
  flex: 1 1 auto;
  padding-right: 8px;
}

body #PickUpUI .j3 {
  display: flex;
  position: relative;
  flex-flow: row nowrap;
  align-items: center;
}

body #PickUpUI .j4 {
  color: #615E66;
  padding: 0 8px;
  position: relative;
  font-size: 15px;
  font-family: 'Inter', Helvetica, sans-serif;
  line-height: 22px;
}

body #PickUpUI .j5 {
  color: #615E66;
  width: 100%;
  border: none;
  font-size: 16px;
  appearance: none;
  font-family: 'Inter', Helvetica, sans-serif;
  letter-spacing: 0.1px;
}

body #PickUpUI .j6 {
  height: 22px;
  line-height: 22px;
}

body #PickUpUI .j7 {
  display: none;
}

body #PickUpUI .j10 {
  margin: 0;
  padding: 0 8px;
  font-size: 14px;
  font-weight: normal;
}

body #PickUpUI .j11 {
  display: inline;
}

<div>
  <div
    id="PickUpUI"
  >
    <div>
      <form
        action="#"
      >
        <div
          class="j0 j1"
        >
          <div
            class="j2"
          >
            <div
              class="j3"
            >
              <div
                class="j4"
              >
                +1
              </div>
              <input
                autocomplete="tel"
                class="j5 j6"
                id="nestedInput"
                name="nestedInput"
                placeholder="(345) 555-2343"
                type="tel"
                value=""
              />
            </div>
          </div>
          <div
            class="j7"
            data-testid="breakpoint-large-div"
          >
            <input
              class="j8 j9 j10"
              data-testid="pickup-button"
              style="min-width: 90px;"
              type="submit"
              value="Click Button"
            />
          </div>
        </div>
        <div
          class="j11"
          data-testid="breakpoint-small-div"
        >
          <input
            class="j8 j12 j10"
            data-testid="pickup-button"
            style="min-width: 90px; margin-top: 4px;"
            type="submit"
            value="Click Button"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`NestedInput with useVerificationCode renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j6 {
  background: #7A60FF;
  color: #FFF;
  border: none;
  height: auto;
  margin: 0px 0px 0px 0px;
  display: flex;
  opacity: 1;
  padding: 0 30px;
  position: relative;
  flex-flow: row nowrap;
  font-size: 18px;
  appearance: none;
  background: linear-gradient(112.25deg, #914EFF -20.38%, #5D1BFF 122.56%);
  min-height: 47px;
  text-align: center;
  transition: opacity 200ms ease-in-out;
  align-items: center;
  font-family: 'Inter', Helvetica, sans-serif;
  line-height: 24px;
  border-radius: 4px;
  letter-spacing: 0.3px;
  text-transform: capitalize;
  justify-content: center;
}

body #PickUpUI .j7 {
  width: auto;
}

body #PickUpUI .j10 {
  width: 100%;
}

body #PickUpUI .j0 {
  width: 100%;
  display: flex;
  padding: 0 6px;
  position: relative;
  flex-flow: row nowrap;
  max-width: 360px;
  align-items: center;
  border-radius: 8px;
  justify-content: space-between;
  background-color: #FFF;
}

body #PickUpUI .j1 {
  border: 1px solid #DFDAE6;
  height: 56px;
}

body #PickUpUI .j2 {
  flex: 1 1 auto;
  padding-right: 8px;
}

body #PickUpUI .j3 {
  color: #615E66;
  width: 100%;
  border: none;
  font-size: 16px;
  appearance: none;
  font-family: 'Inter', Helvetica, sans-serif;
  letter-spacing: 0.1px;
}

body #PickUpUI .j4 {
  height: 22px;
  line-height: 22px;
}

body #PickUpUI .j5 {
  display: none;
}

body #PickUpUI .j8 {
  margin: 0;
  padding: 0 8px;
  font-size: 14px;
  font-weight: normal;
}

body #PickUpUI .j9 {
  display: inline;
}

<div>
  <div
    id="PickUpUI"
  >
    <div>
      <form
        action="#"
      >
        <div
          class="j0 j1"
        >
          <div
            class="j2"
          >
            <input
              class="j3 j4"
              id="nestedInput"
              name="nestedInput"
              placeholder="Placeholder text"
              value="initial value"
            />
          </div>
          <div
            class="j5"
            data-testid="breakpoint-large-div"
          >
            <input
              class="j6 j7 j8"
              data-testid="pickup-button"
              style="min-width: 90px;"
              type="submit"
              value="Click Button"
            />
          </div>
        </div>
        <div
          class="j9"
          data-testid="breakpoint-small-div"
        >
          <input
            class="j6 j10 j8"
            data-testid="pickup-button"
            style="min-width: 90px; margin-top: 4px;"
            type="submit"
            value="Click Button"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Standard NestedInput renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j6 {
  background: #7A60FF;
  color: #FFF;
  border: none;
  height: auto;
  margin: 0px 0px 0px 0px;
  display: flex;
  opacity: 1;
  padding: 0 30px;
  position: relative;
  flex-flow: row nowrap;
  font-size: 18px;
  appearance: none;
  background: linear-gradient(112.25deg, #914EFF -20.38%, #5D1BFF 122.56%);
  min-height: 47px;
  text-align: center;
  transition: opacity 200ms ease-in-out;
  align-items: center;
  font-family: 'Inter', Helvetica, sans-serif;
  line-height: 24px;
  border-radius: 4px;
  letter-spacing: 0.3px;
  text-transform: capitalize;
  justify-content: center;
}

body #PickUpUI .j7 {
  width: auto;
}

body #PickUpUI .j0 {
  width: 100%;
  display: flex;
  padding: 0 6px;
  position: relative;
  flex-flow: row nowrap;
  max-width: 360px;
  align-items: center;
  border-radius: 8px;
  justify-content: space-between;
  background-color: #FFF;
}

body #PickUpUI .j1 {
  border: 1px solid #DFDAE6;
  height: 56px;
}

body #PickUpUI .j2 {
  flex: 1 1 auto;
  padding-right: 8px;
}

body #PickUpUI .j3 {
  color: #615E66;
  width: 100%;
  border: none;
  font-size: 16px;
  appearance: none;
  font-family: 'Inter', Helvetica, sans-serif;
  letter-spacing: 0.1px;
}

body #PickUpUI .j4 {
  height: 48px;
  line-height: 24px;
}

body #PickUpUI .j5 {
  display: none;
}

<div>
  <div
    id="PickUpUI"
  >
    <div>
      <form
        action="#"
      >
        <div
          class="j0 j1"
        >
          <div
            class="j2"
          >
            <input
              class="j3 j4"
              id="nestedInput"
              name="nestedInput"
              placeholder="Placeholder text"
              value="initial value"
            />
          </div>
          <div
            class="j5"
            data-testid="breakpoint-large-div"
          >
            <input
              class="j6 j7"
              data-testid="pickup-button"
              style="min-width: 90px;"
              type="submit"
              value="Click Button"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
